--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,14 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-plotly.js": "^2.5.1",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "axios": "^0.21.1",
+    "dotenv": "^10.0.0",
+    "node-sass": "^6.0.1",
+    "react-financial-charts": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
