--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@alpacahq/alpaca-trade-api": "^2.16.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "node-fetch": "^2.6.7",
     "nodemon": "^2.0.19",
