--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,15 +11,13 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
-    "bootstrap": "^5.1.3",
-    "bootstrap-icons": "^1.9.1",
     "canvasjs": "^1.8.3",
     "chart.js": "^3.8.2",
     "dotenv": "^10.0.0",
+    "material": "^0.4.3",
     "node-sass": "^6.0.1",
     "plotly.js": "^2.13.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.4.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-financial-charts": "^1.3.2",
